# SobelCam-Qt

./: CMakeLists.txt  README.md  test_stb_webcamera.pro
.github/workflows/: ci.yml
include/: MainWindow.h  ProcessorWorker.h
src/: Image.cpp
